--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
   },
   "homepage": "https://github.com/pathwar/node-pathwar",
   "dependencies": {
-    "axios": "^0.5.0",
+    "debug": "^2.1.1",
+    "httpinvoke": "^1.3.3",
+    "lodash": "^3.0.0",
     "rc": "^0.5.5"
   },
   "devDependencies": {
