--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,5 @@
-language: node_js
-node_js:
-- "0.11"
-- "0.10"
-os:
-- linux
-- osx
-matrix:
-  allow_failures:
-  - os: osx
+install:
+- make travis_install
+
+script:
+- make travis
