Expose real Promise API (Bluebird). Full request requests and response are exposed in then/catch methods.
cc @tusbar

(#2)

--- a/package.json
+++ b/package.json
@@ -23,13 +23,13 @@
   },
   "homepage": "https://github.com/pathwar/node-pathwar",
   "dependencies": {
-    "chai": "^1.10.0",
     "debug": "^2.1.1",
-    "httpinvoke": "^1.3.3",
     "lodash": "^3.0.0",
-    "rc": "^0.5.5"
+    "rc": "^0.5.5",
+    "request-promise": "^0.4.1"
   },
   "devDependencies": {
+    "chai": "^1.10.0",
     "mocha": "^2.1.0"
   }
 }
