Printing dates with moment

--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "commander": "^2.8.1",
     "debug": "^2.1.1",
     "lodash": "^3.7.0",
+    "moment": "^2.10.2",
     "nedb": "^1.1.2",
     "q": "^1.2.1",
     "rc": "^0.5.5",
