--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   },
   "homepage": "https://github.com/pathwar/node-pathwar",
   "dependencies": {
+    "JSONPath": "^0.10.0",
     "cli-table": "^0.3.1",
     "commander": "^2.8.1",
     "debug": "^2.1.1",
